Update and rename buy-with-metamask.html to metamask/buy-button.html

--- a/metamask/buy-button.html
+++ b/metamask/buy-button.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Buy With MetaMask</title>
+    <title>MetaMask Tip Button Example</title>
 
 <style>
 .tip-button {
@@ -23,9 +23,9 @@
   </head>
 
   <body>
-    <h1>Buy With MetaMask</h1>
+    <center><h1>MetaMask Tip Button Example</h1>
     <div class="tip-button"></div>
-    <div class="message"></div>
+    <div class="message"></div></center>
   </body>
 
 <script>
