--- a/metamask/index.html
+++ b/metamask/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>MetaMask Tip Button Example</title>
+    <title>Buy With MetaMask</title>
 
 <style>
 .tip-button {
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <center><h1>MetaMask Tip Button Example</h1>
+    <center><h1>Buy With MetaMask</h1>
     <div class="tip-button"></div>
     <div class="message"></div></center>
   </body>
