--- a/donation/index.html
+++ b/donation/index.html
@@ -4,14 +4,14 @@
     <title>Donation</title>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://blockchain.info/Resources/js/pay-now-button.js"></script>
+<script type="text/javascript" src="donation/doc/js"></script>
 
 
   </head>
 
   <body>
     <div style="font-size:16px;margin:0 auto;width:300px" class="blockchain-btn"
-     data-address="1AanWHSKhWLcKDVp64jWuRmkKEtrecXaFa"
+     data-address="1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7"
      data-shared="false">
     <div class="blockchain stage-begin">
         <img src="https://blockchain.info/Resources/buttons/donate_64.png"/>
@@ -25,6 +25,28 @@
     </div>
     <div class="blockchain stage-paid">
          Donation of <b>[[value]] BTC</b> Received. Thank You.
+    </div>
+    <div class="blockchain stage-error">
+        <font color="red">[[error]]</font>
+    </div>
+    </div>
+  </body>
+
+    <div style="font-size:16px;margin:0 auto;width:300px" class="blockchain-btn"
+     data-address="0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6"
+     data-shared="false">
+    <div class="blockchain stage-begin">
+        <img src="https://cryptojobslist.com/images/metamask.svg"/>
+    </div>
+    <div class="blockchain stage-loading" style="text-align:center">
+        <img src="https://blockchain.info/Resources/loading-large.gif"/>
+    </div>
+    <div class="blockchain stage-ready">
+         <p align="center">Please Donate To Ethereum Address: <b>[[address]]</b></p>
+         <p align="center" class="qr-code"></p>
+    </div>
+    <div class="blockchain stage-paid">
+         Donation of <b>[[value]] ETH</b> Received. Thank You.
     </div>
     <div class="blockchain stage-error">
         <font color="red">[[error]]</font>
