--- a/donation/donate-with-bitcoin.html
+++ b/donation/donate-with-bitcoin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Donation</title>
+    <title>Donate With Bitcoin</title>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript" src="donation/doc/js"></script>
