--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>My Dae Platform</title>
+		<title>Dae Platform</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- Favicon -->
@@ -23,9 +23,10 @@
 				<div class="inner">
 					<img src="images/dae_platform_logo_icon.png" />
 					<h1><strong>Dae Platform</strong></h1>
-					<p>Dae Platform is a global public tokenization platform, founded in 2017.<br />
-					Dae Platform mission is to rediscover worldwide entrepreneurial DNA by providing shared facilities, offering easy-to-use and highly functional tools to create blockchain for everyone. or organizations that can take advantage of it.<br />
-					We want to create a free economy, perfect and instant.</p>
+					<p>Digital Assets Solution</p>
+					<p>Dae Platform is a digital asset solution platform through blockchain.<br />
+					Dae Platform offers easy-to-use and highly functional tools to make blockchain available to everyone.<br />
+					Dae Platform wants to create a free economy, perfect and instant.</p>
 					<ul class="actions">
 						<li><a href="#two" class="button scrolly">Discover</a></li>
 					</ul>
@@ -48,18 +49,47 @@
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
-								<h2>Project</h2>
+								<h2>Dae Platform Projects</h2>
 							</header>
-							<p><b>Daereum</b></p>
-							<p>Daereum is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.</p>
+							<p><b><a target="_blank" href="https://etherscan.io/token/0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f">Daereum</a></b></p>
+							<p>Daereum (DAER) is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.</p>
+							<p><b>Daethereum</b></p>
+							<p>Daethereum (DTHR) is digital asset designed without relying on a central server.</p>
 							<p><b>Tokenization</b></p>
-							<p>Dae Platform enables easy transformation of any valuable offering into blockchain tokens.</p>
+							<p>We will help issue your tokens, by handling all technical aspects and maintaining security. You can focus completely on your product development.</p>
 							<p><b>Daether</b></p>
-							<p>All tokens issued from Dae Platform will be listed on the Dae Platform Exchange, and will be tradable immediately with other tokens.</p>
-							<p><b>Dae Platform Wallet</b></p>
-							<p>Client-side interface for generating Ethereum wallets & more.</p>
+							<p>Decentralized Ethereum Token Exchange.</p>
+							<p><b>Daexchanger</b></p>
+							<p>Currency exchange (cryptocurrency and foreign currency).</p>
+							<p><b>Ndaexchanger</b></p>
+							<p>Ndaexchanger is an automated cryptocurrency exchange service, operated by Dae Platform.</p>
 							<p><b>Development</b></p>
 							<p>Dae Platform development plan.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		<!-- Page -->
+		<section id="one" class="main style1">
+			<div class="container">
+				<header class="major">
+					<h2><a target="_blank" href="#">Submit Currency (Cryptocurrency & Foreign Currency) To Be Listed In Our Markets</a></h2>
+				</header>
+			</div>
+		</section>
+			
+			<section id="one" class="main style1">
+				<div class="container">
+					<div class="row 150%">
+						<div class="6u 12u$(medium)">
+							<header class="major">
+								<h2><a target="_blank" href="//daether.daeplatform.net/">Daether</a></h2>
+							</header>
+							<p>Decentralized Ethereum Token Exchange.</p>
+						</div>
+						<div class="6u$ 12u$(medium) important(medium)">
+							<span class="image fit"><img src="images/daether.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -71,15 +101,30 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2><a target="_blank" href="//daeplatform.net/daereum">Daereum</a></h2>
+								<h2><a target="_blank" href="//daexchanger.com">Daexchanger</a></h2>
 							</header>
-							<p>Daereum is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.<br />
-							Daereum uses peer to peer technology without central operations. Managing transactions and disposing of digital assets is done collectively by the network.<br />
-							Daereum is based on ERC20-Token on Ethereal Blockchain.</p>
-							<p>Daereum Contract Address: <a target="_blank" href="https://etherscan.io/token/0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f">0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f</a></p>
+							<p>Daexchanger is an online currency online platform (cryptocurrency & foreign currency), supported by several payment gateways.</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/daereum_icon.png" alt="" /></span>
+							<span class="image fit"><img src="images/daexchanger.png" alt="" /></span>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		<!-- Page -->
+			<section id="one" class="main style1">
+				<div class="container">
+					<div class="row 150%">
+						<div class="6u 12u$(medium)">
+							<header class="major">
+								<h2><a target="_blank" href="//n.daexchanger.com">Ndaexchanger</a></h2>
+							</header>
+							<p>Ndaexchanger is an automated cryptocurrency exchange service, operated by Dae Platform.</p>
+							<p>Ndaexchanger is powered by N.exchange.</p>
+						</div>
+						<div class="6u$ 12u$(medium) important(medium)">
+							<span class="image fit"><img src="images/ndaexchanger.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -97,23 +142,6 @@
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/daereum-economy.jpg" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Page -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2><a target="_blank" href="//my.daeplatform.net/daether">Daether</a></h2>
-							</header>
-							<p>All tokens issued from Dae Platform will be listed on the Daether Delta, and will be tradable immediately with other tokens.</p>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/daether.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
