Update Our Projects And Our Services

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dae Platform</title>
+		<title>Dae Platform - Digital Assets Solution</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- Favicon -->
@@ -74,7 +74,7 @@
 		<section id="one" class="main style1">
 			<div class="container">
 				<header class="major">
-					<h2><a target="_blank" href="#">Submit Currency (Cryptocurrency & Foreign Currency) To Be Listed In Our Markets</a></h2>
+					<center><h2><a target="_blank" href="#">Our Services</a></h2></center>
 				</header>
 			</div>
 		</section>
@@ -506,11 +506,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a target="_blank" href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a target="_blank" href="//twitter.com/daeplatformnet" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a target="_blank" href="//fb.com/daeplatform" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a target="_blank" href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a target="_blank" href="//github.com/daeplatform" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="mailto:info@daeplatform.net" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a target="_blank" href="mailto:info@daeplatform.net" class="icon alt fa-envelope"><span class="label">Email</span></a></li>					<li><a target="_blank" href="//t.me/daeplatform" class="icon alt fa-telegram"><span class="label">Telegram Channel</span></a></li>
+					<li><a target="_blank" href="//fb.com/daeplatform" class="icon alt fa-telegram"><span class="label">Telegram Group</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; 2017-2018 Dae Platform, All Rights Reserved.</li>
