--- a/index.html
+++ b/index.html
@@ -76,112 +76,9 @@
 				<header class="major">
 					<center><h2><a target="_blank" href="#">Our Services</a></h2></center>
 				</header>
+				<center><script async src="//jsfiddle.net/d6dbv0f7/embed/"></script></center>
 			</div>
 		</section>
-			
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2><a target="_blank" href="//daether.daeplatform.net/">Daether</a></h2>
-							</header>
-							<p>Decentralized Ethereum Token Exchange.</p>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/daether.png" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Page -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2><a target="_blank" href="//daexchanger.com">Daexchanger</a></h2>
-							</header>
-							<p>Daexchanger is an online currency online platform (cryptocurrency & foreign currency), supported by several payment gateways.</p>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/daexchanger.png" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Page -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2><a target="_blank" href="//n.daexchanger.com">Ndaexchanger</a></h2>
-							</header>
-							<p>Ndaexchanger is an automated cryptocurrency exchange service, operated by Dae Platform.</p>
-							<p>Ndaexchanger is powered by N.exchange.</p>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/ndaexchanger.png" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Page -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2><a target="_blank" href="//daeplatform.net/tokenisasi">Tokenization</a></h2>
-							</header>
-							<p>Dae Platform enables easy transformation of any valuable offering into blockchain tokens, which can include loyalty points, virtual goods, real assets, or creative contents. Dae Platform aims to create financial inclusion and connect anyone to a global value network for the acceleration of innovation.</p>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/daereum-economy.jpg" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Page -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row 150%">
-						<div class="6u 12u$(medium)">
-							<header class="major">
-								<h2><a target="_blank" href="//my.daeplatform.net/wallet">Dae Platform Wallet</a></h2>
-							</header>
-							<p>Client-side interface for generating Ethereum wallets & more.<br />
-							Interact with the Ethereum blockchain easily & securely.</p>
-						</div>
-						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/daeplatformwallet.png" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Page -->
-			<section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Donations are always appreciated!</h2>
-						<p>ETH: 0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6</p>
-						<p>BTC: 1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7</p>
-						<p>BCH: qpum9tx8hrgxz2clhj35dkdpwwf5zdrr4vmjxe8pah</p>
-					</header>
-					<ul class="actions uniform">
-						<li><a href="//daeplatform.net/daereum" class="button scrolly">Daereum</a></li>
-						<li><a href="#" class="button scrolly">Tokenization</a></li>
-						<li><a href="#" class="button scrolly">Daether</a></li>
-						<li><a href="/wallet" class="button scrolly">Dae Platform Wallet</a></li>
-					</ul>
-				</div>
-			</section>
 
 		<!-- Five -->
 		<!--
