--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 		<section id="one" class="main style1">
 			<div class="container">
 				<header class="major">
-					<center><h2><a target="_blank" href="#">Our Services</a></h2></center>
+					<center><h2><a target="_blank" href="#">Indodax Markets</a></h2></center>
 				</header>
-				<center><script async src="//jsfiddle.net/d6dbv0f7/embed/"></script></center>
+				<center><script async src="//jsfiddle.net/d6dbv0f7/embed/result/"></script></center>
 			</div>
 		</section>
 
