Dae Platform Explorer

--- a/explorer.html
+++ b/explorer.html
@@ -22,15 +22,8 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<img src="images/dae_platform_logo_icon.png" />
-					<h1><strong>Dae Platform</strong></h1>
-					<p>Digital Assets Solution</p>
-					<p>Dae Platform is a digital asset solution platform through blockchain.<br />
-					Dae Platform offers easy-to-use and highly functional tools to make blockchain available to everyone.<br />
-					Dae Platform wants to create a free economy, perfect and instant.</p>
-					<ul class="actions">
-						<li><a href="#two" class="button scrolly">Discover</a></li>
-					</ul>
+					<script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
+					<div class="coinmarketcap-currency-widget" data-currencyid="1027" data-base="USD"  data-secondary="BTC"></div>
 				</div>
 			</section>
 
