--- a/donation/metamask.html
+++ b/donation/metamask.html
@@ -39,7 +39,7 @@ tipButton.addEventListener('click', function() {
   web3.eth.sendTransaction({
     to: MY_ADDRESS,
     from: user_address,
-    value: web3.toWei('1', 'ether'),
+    value: web3.toWei('', 'ether'),
   }, function (err, transactionHash) {
     if (err) return renderMessage('There was a problem!: ' + err.message)
     // If you get a transactionHash, you can assume it was sent,
