--- a/index.html
+++ b/index.html
@@ -51,20 +51,14 @@
 							<header class="major">
 								<h2>Dae Platform Projects</h2>
 							</header>
-							<p><b><a target="_blank" href="https://etherscan.io/token/0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f">Daereum</a></b></p>
-							<p>Daereum (DAER) is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.</p>
-							<p><b>Daethereum</b></p>
-							<p>Daethereum (DTHR) is digital asset designed without relying on a central server.</p>
+							<p><b>Our Crypto</a></b></p>
+							<p><a target="_blank" href="https://etherscan.io/token/0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f">Daereum (DAER)</a></b></p> is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.</p>
+							<p><a target="_blank" href="#">Daethereum (DTHR)</a> is digital asset designed without relying on a central server.</p>
 							<p><b>Tokenization</b></p>
 							<p>We will help issue your tokens, by handling all technical aspects and maintaining security. You can focus completely on your product development.</p>
-							<p><b>Daether</b></p>
-							<p>Decentralized Ethereum Token Exchange.</p>
-							<p><b>Daexchanger</b></p>
-							<p>Currency exchange (cryptocurrency and foreign currency).</p>
-							<p><b>Ndaexchanger</b></p>
-							<p>Ndaexchanger is an automated cryptocurrency exchange service, operated by Dae Platform.</p>
-							<p><b>Development</b></p>
-							<p>Dae Platform development plan.</p>
+							<p><b>Dae Platform Markets</b> is a currency markets for trading and/or exhchange.</p>
+							<p><b>Ticket Price Comparison</b></p>
+							<p>Is a travel platform.</p>
 						</div>
 					</div>
 				</div>
@@ -74,9 +68,9 @@
 		<section id="one" class="main style1">
 			<div class="container">
 				<header class="major">
-					<center><h2><a target="_blank" href="#">Indodax Markets</a></h2></center>
+					<center><h2><a target="_blank" href="#">Development Plans</a></h2></center>
 				</header>
-				<center><script async src="//jsfiddle.net/d6dbv0f7/embed/result/"></script></center>
+				<center>A plan for development that is discussed with the community.</center>
 			</div>
 		</section>
 
