--- a/dthr/index.html
+++ b/dthr/index.html
@@ -96,10 +96,24 @@ body {
 </div>
 
 <section id="Token">
+<center><img src="Daethereum.png" /></center>
 <h2 style="text-align:center">Daethereum (DTHR)</h2>
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
 0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
 <p style="text-align:center">Min. 0.005 ETH per transaction	|	Max. 1 ETH per transaction</p>
+
+<p><b>Property</b></p>
+<p>Token Name: Daethereum<br />
+Token Symbol: DTHR<br />
+Type: ERC20<br />
+Platform: Ethereum Total Supply: 100,000,000<br />
+Decimal: 8
+</p>
+  <p><b>Distibution</b></p>
+<p>Initial Token Sale: 50,000,000 DTHR<br />
+Bounty & Airdrop: 20,000,000 DTHR<br />
+Team: 10,000,000 DTHR<br />
+Savings Fund: 20,000,000 DTHR</p>
 
 <div class="columns">
   <ul class="price">
@@ -136,6 +150,7 @@ body {
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
 </div>
+</section>
 
 
 
