--- a/dthr/index.html
+++ b/dthr/index.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<title>Daethereum (DTHR) - Intial Token Sale (ITS)</title>
+<meta name="description" content="Daethereum (DTHR) is digital asset designed without relying on a central server.>
+<meta name="keywords" content="Dae Platform, Daethereum, DTHR, digital asset, Bitcoin, BTC, Bitcoin Cash, BCH, Ethereum, ETH, Litecoin, LTC, Altcoin, Cryptocurrency, Cryptocoins, Cryptotokens, ICO, Initial Coin Offering,ITS, Initial Token Sale>
+<link rel="shortcut icon" href="images/Daethereum.png">
+
 <style>
 
 body {
@@ -88,33 +93,36 @@ body {
 <body>
 
 <div id="navbar">
-  <a href="#">Home</a>
+  <a href="#Intro">Home</a>
   <a href="#Token">Token</a>
+  <a href="#Projects">Projects</a>
   <a href="#Roadmap">Roadmap</a>
   <a href="#FAQ">FAQ</a>
-  <a href="#Contact">Contact</a>
 </div>
 
-<section id="Token">
+<section id="Intro">
 <center><img src="Daethereum.png" /></center>
-<h2 style="text-align:center">Daethereum (DTHR)</h2>
-<p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
-0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
-<p style="text-align:center">Min. 0.005 ETH per transaction	|	Max. 1 ETH per transaction</p>
-
-<p><b>Property</b></p>
-<p>Token Name: Daethereum<br />
+<p style="text-align:center"><b>Property</b></p>
+<p style="text-align:center">
+Token Name: Daethereum<br />
 Token Symbol: DTHR<br />
 Type: ERC20<br />
 Platform: Ethereum Total Supply: 100,000,000<br />
 Decimal: 8
 </p>
-  <p><b>Distibution</b></p>
-<p>Initial Token Sale: 50,000,000 DTHR<br />
+<p style="text-align:center"><b>Distibution</b></p>
+<p style="text-align:center">
+Initial Token Sale: 50,000,000 DTHR<br />
 Bounty & Airdrop: 20,000,000 DTHR<br />
 Team: 10,000,000 DTHR<br />
 Savings Fund: 20,000,000 DTHR</p>
+</section>
 
+<section id="Token">
+<h2 style="text-align:center">Daethereum (DTHR)</h2>
+<p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
+0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
+<p style="text-align:center">Min. 0.005 ETH per transaction	|	Max. 1 ETH per transaction</p>
 <div class="columns">
   <ul class="price">
     <li class="header">Round 1</li>
@@ -126,7 +134,6 @@ Savings Fund: 20,000,000 DTHR</p>
     <li class="grey"><a href="#" class="button">Process</a></li>
   </ul>
 </div>
-
 <div class="columns">
   <ul class="price">
     <li class="header" style="background-color:#4CAF50">Round 2</li>
@@ -138,7 +145,6 @@ Savings Fund: 20,000,000 DTHR</p>
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
 </div>
-
 <div class="columns">
   <ul class="price">
     <li class="header">Round 3</li>
@@ -150,6 +156,25 @@ Savings Fund: 20,000,000 DTHR</p>
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
 </div>
+</section>
+
+<section id="Projects">
+<p style="text-align:center"><b>Tokenization</b></p>
+<p style="text-align:center">
+We will help issue your tokens, by handling all technical aspects and maintaining security. You can focus completely on your product development.
+</p>
+<p style="text-align:center"><b>Markets</b></p>
+<p style="text-align:center">
+Is the currency market for trading and/or exchange.
+</p>
+<p style="text-align:center"><b>Ticket Price Comparison</b></p>
+<p style="text-align:center">
+Price comparison from various travel sites.
+</p>
+<p style="text-align:center"><b>Development Plans</b></p>
+Development plans are discussed with the community.
+<p style="text-align:center">
+</p>
 </section>
 
 
