--- a/dthr/index.html
+++ b/dthr/index.html
@@ -8,7 +8,7 @@
 <title>Daethereum (DTHR) - Intial Token Sale (ITS)</title>
 <meta name="description" content="Daethereum (DTHR) is digital asset designed without relying on a central server.>
 <meta name="keywords" content="Dae Platform, Daethereum, DTHR, digital asset, Bitcoin, BTC, Bitcoin Cash, BCH, Ethereum, ETH, Litecoin, LTC, Altcoin, Cryptocurrency, Cryptocoins, Cryptotokens, ICO, Initial Coin Offering,ITS, Initial Token Sale>
-<link rel="shortcut icon" href="images/Daethereum.png">
+<link rel="shortcut icon" href="dthr/Daethereum.png">
 
 <style>
 
@@ -101,7 +101,8 @@ body {
 </div>
 
 <section id="Intro">
-<center><img src="Daethereum.png" /></center>
+<center><img src="dthr/Daethereum.png" /></center>
+<h2 style="text-align:center">Daethereum (DTHR)</h2>
 <p style="text-align:center"><b>Property</b></p>
 <p style="text-align:center">
 Token Name: Daethereum<br />
@@ -119,7 +120,7 @@ Savings Fund: 20,000,000 DTHR</p>
 </section>
 
 <section id="Token">
-<h2 style="text-align:center">Daethereum (DTHR)</h2>
+<h2 style="text-align:center">Initial Token Sale</h2>
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
 0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
 <p style="text-align:center">Min. 0.005 ETH per transaction	|	Max. 1 ETH per transaction</p>
@@ -159,6 +160,7 @@ Savings Fund: 20,000,000 DTHR</p>
 </section>
 
 <section id="Projects">
+<h2 style="text-align:center"><b>Projects</b></h2>
 <p style="text-align:center"><b>Tokenization</b></p>
 <p style="text-align:center">
 We will help issue your tokens, by handling all technical aspects and maintaining security. You can focus completely on your product development.
@@ -172,9 +174,21 @@ Is the currency market for trading and/or exchange.
 Price comparison from various travel sites.
 </p>
 <p style="text-align:center"><b>Development Plans</b></p>
-Development plans are discussed with the community.
 <p style="text-align:center">
+Development plans are discussed with the community.
 </p>
+</section>
+
+<section id="Roadmap">
+<h2 style="text-align:center"><b>Roadmap</b></h2>
+</section>
+
+<section id="FAQ">
+<h2 style="text-align:center"><b>FAQ</b></h2>
+</section>
+
+<section id="Thank">
+<h2 style="text-align:center"><b>Thank's</b></h2>
 </section>
 
 
