--- a/dthr/index.html
+++ b/dthr/index.html
@@ -121,6 +121,7 @@ Savings Fund: 20,000,000 DTHR</p>
 
 <section id="Token">
 <h2 style="text-align:center">Initial Token Sale</h2>
+<center><iframe src="//daeplatform.net/dthr/countdown.html" allowTransparency="true" frameborder="0" width="320" height="135"></iframe><center>
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
 0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
 <p style="text-align:center">Min. 0.005 ETH per transaction	|	Max. 1 ETH per transaction</p>
