--- a/dthr/index.html
+++ b/dthr/index.html
@@ -122,9 +122,10 @@ Savings Fund: 20,000,000 DTHR</p>
 <section id="Token">
 <h2 style="text-align:center">Initial Token Sale</h2>
 <center><iframe src="https://daeplatform.net/dthr/countdown.html" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
+<center><l<iframe src="https://www.daeplatform.net/dthr/countdown.html" style="border:0px #ffffff none;" name="Countdown" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="330px" width="330px" allowfullscreen></iframe></center>
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
 0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
-<p style="text-align:center">Min. 0.005 ETH per transaction	|	Max. 1 ETH per transaction</p>
+<p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction</p>
 <div class="columns">
   <ul class="price">
     <li class="header">Round 1</li>
@@ -132,7 +133,7 @@ Savings Fund: 20,000,000 DTHR</p>
     <li>25 million DTHR</li>
     <li>Starts on July 09, 2018</li>
     <li>Completed on July 13, 2018</li>
-    <li>Sold 0 DTHR</li>
+  <li>Sold 0 DTHR</li>
     <li class="grey"><a href="#" class="button">Process</a></li>
   </ul>
 </div>
