--- a/dthr/index.html
+++ b/dthr/index.html
@@ -121,8 +121,7 @@ Savings Fund: 20,000,000 DTHR</p>
 
 <section id="Token">
 <h2 style="text-align:center">Initial Token Sale</h2>
-<center><iframe src="https://daeplatform.net/dthr/countdown.html" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
-<center><l<iframe src="https://www.daeplatform.net/dthr/countdown.html" style="border:0px #ffffff none;" name="Countdown" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="330px" width="330px" allowfullscreen></iframe></center>
+<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
 0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
 <p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction</p>
