--- a/dthr/its.html
+++ b/dthr/its.html
@@ -62,10 +62,10 @@
 </head>
 <body>
 
-<h2 style="text-align:center">Daethereum (DTHR)</h2>
+<h2 style="text-align:center">Initial Token Sale</h2>
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
 0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
-<p style="text-align:center">Min. 0.005 ETH per transaction	|	Max. 1 ETH per transaction</p>
+<p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction</p>
 
 <div class="columns">
   <ul class="price">
@@ -75,7 +75,7 @@
     <li>Starts on July 09, 2018</li>
     <li>Completed on July 13, 2018</li>
     <li>Sold 0 DTHR</li>
-    <li class="grey"><a href="#" class="button">Process</a></li>
+    <li class="grey"><a href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button">Process</a></li>
   </ul>
 </div>
 
