--- a/daethereum.html
+++ b/daethereum.html
@@ -37,12 +37,19 @@
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
 						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
-						<li><a href="#two" class="button scrolly">Buy With Altcoin</a></li>
-						<li><a href="#two" class="button scrolly">Buy With Ethereum</a></li>
+						<li><a href="#its" class="button scrolly">Buy With Altcoin</a></li>
+						<li><a href="#https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
 					</ul>
 
 				</div>
 			</section>
+
+			<!-- Initial Token Sale -->
+		<section id="ITS" class="main style1">
+			<div class="container">
+				<center><iframe src="https://daeplatform.net/dthr/its.html" name="ITS" scrolling="no" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
+			</div>
+		</section>
 
 		<!-- Page -->
 			<section id="two" class="main style2">
