--- a/daethereum.html
+++ b/daethereum.html
@@ -47,7 +47,7 @@
 			<!-- Initial Token Sale -->
 		<section id="ITS" class="main style1">
 			<div class="container">
-				<center><iframe src="https://daeplatform.net/dthr/its.html" name="ITS" scrolling="no" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
+				<center><iframe style="border: 0px #ffffff none;" src="https://daeplatform.net/dthr/its.html" name="Initial Token Sale" width="750px" height="550px" frameborder="1" marginwidth="0px" marginheight="0px" scrolling="no" allowfullscreen="allowfullscreen"></iframe>
 			</div>
 		</section>
 
