--- a/daethereum.html
+++ b/daethereum.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<img src="images/dae_platform_logo_icon.png" />
+					<img src="dthr/Daethereum.png" />
 					<h1><strong>Daethereum (DTHR)</strong></h1>
 					<p>Property</p>
 					<p>Token Name: Daethereum<br />
@@ -37,7 +37,7 @@
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
 						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
-						<li><a href="#its" class="button scrolly">Buy With Altcoin</a></li>
+						<li><a href="#ITS" class="button scrolly">Buy With Altcoin</a></li>
 						<li><a href="#https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
 					</ul>
 
@@ -47,7 +47,7 @@
 			<!-- Initial Token Sale -->
 		<section id="ITS" class="main style1">
 			<div class="container">
-				<center><iframe style="border: 0px #ffffff none;" src="https://daeplatform.net/dthr/its.html" name="Initial Token Sale" width="750px" height="550px" frameborder="1" marginwidth="0px" marginheight="0px" scrolling="no" allowfullscreen="allowfullscreen"></iframe>
+				<center><iframe style="border: 0px #ffffff none;" src="https://daeplatform.net/dthr/its.html" name="Initial Token Sale" width="800px" height="550px" frameborder="1" marginwidth="0px" marginheight="0px" scrolling="no" allowfullscreen="allowfullscreen"></iframe>
 			</div>
 		</section>
 
