--- a/daethereum.html
+++ b/daethereum.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="images/dae_platform_logo_uDN_icon.ico">
+		<link rel="shortcut icon" href="dthr/Daethereum.png">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -98,10 +98,6 @@
 
 			<!-- Initial Token Sale -->
 		<section id="ITS" class="main style1">
-			<div class="container">
-				<center><iframe style="border: 0px #ffffff none;" src="https://daeplatform.net/dthr/its.html" name="Initial Token Sale" width="900px" height="550px" frameborder="1" marginwidth="0px" marginheight="0px" scrolling="no" allowfullscreen="allowfullscreen"></iframe>
-			</div>
-
 <h2 style="text-align:center">Initial Token Sale</h2>
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
 0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
