--- a/daethereum.html
+++ b/daethereum.html
@@ -75,20 +75,20 @@
 				<div class="inner">
 					<img src="dthr/Daethereum.png" />
 					<h1><strong>Daethereum (DTHR)</strong></h1>
-					<p>Property</p>
+					<p><b>Property</b></p>
 					<p>Token Name: Daethereum<br />
 					Token Symbol: DTHR<br />
 					Type: ERC20<br />
 					Platform: Ethereum
 					Total Supply: 100,000,000<br />
 					Decimal: 8</p>
-					<p>Distibution</p>
+					<p><b>Distibution</b></p>
 					<p>Initial Token Sale: 50,000,000 DTHR<br />
 					Bounty & Airdrop: 20,000,000 DTHR<br />
 					Team: 10,000,000 DTHR
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
-						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="320" height="320"></iframe></center>
+						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="350" height="550"></iframe></center>
 						<li><a href="#ITS" class="button scrolly">Buy With Altcoin</a></li>
 						<li><a href="#https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
 					</ul>
@@ -138,47 +138,65 @@
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
 </div>
-
 		</section>
 
-		<!-- Page -->
-			<section id="two" class="main style2">
+		<!-- Roadmap -->
+			<section id="Roadmap" class="main style2">
 				<div class="container">
 					<div class="row 150%">
+						<header class="major">
+							<h2>Roadmap</h2>
+						</header>
 						<div class="6u 12u$(medium)">
-							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
-								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
-								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
-							</ul>
+							<h1><b>2017</b></h1>
+							<p><b>Q1</b></p>
+							<p>Dae Platform Plans</p>
+							<h1><b>2018</b></h1>
+							<p><b>Q1</b></p>
+							<p>Initial Daethereum Offering (Initial Token Sale)</p>
+							<p><b>Q2</b></p>
+							<p>Tokenization & Listed In EtherDelta, ForkDelta</p>
+							<p><b>Q3</b></p>
+							<p>Launch of Online Information Media Site</p>
 						</div>
 						<div class="6u$ 12u$(medium)">
-							<header class="major">
-								<h2>Dae Platform Projects</h2>
-							</header>
-							<p><b>Our Crypto</a></b></p>
-							<p><a target="_blank" href="https://etherscan.io/token/0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f">Daereum (DAER)</a></b></p> is an experimental digital asset that makes it easy to make payments to anyone, anywhere in the world.</p>
-							<p><a target="_blank" href="#">Daethereum (DTHR)</a> is digital asset designed without relying on a central server.</p>
-							<p><b>Tokenization</b></p>
-							<p>We will help issue your tokens, by handling all technical aspects and maintaining security. You can focus completely on your product development.</p>
-							<p><b>Dae Platform Markets</b> is a currency markets for trading and/or exhchange.</p>
-							<p><b>Ticket Price Comparison</b></p>
-							<p>Is a travel platform.</p>
+							<p><b>Q4</b></p>
+							<p>Launch of Travel Comparison Ticket Price Site</p>
+							<p><b>Q4</b></p>
+							<p>Launch of Dae Platform Markets</p>
+							<h1><b>2019</b></h1>
+							<p><b>Q1</b></p>
+							<p>Gathering And Discuss Dae Platform Development</p>
+							<p><b>Q2</b></p>
+							<p>Launch of New Projects Discussed.</p>
 						</div>
 					</div>
 				</div>
 			</section>
 
-		<!-- Page -->
-		<section id="one" class="main style1">
+		<!-- Others -->
+		<section id="Others" class="main style1">
 			<div class="container">
 				<header class="major">
-					<center><h2><a target="_blank" href="#">Development Plans</a></h2></center>
+					<center><h2><a target="_blank" href="#">Others</a></h2></center>
 				</header>
-				<center>A plan for development that is discussed with the community.</center>
+				<div class="6u 12u$(medium)">
+					<header class="major">
+						<center><h1><b>Partners</b></h1></center>
+					</header>
+					Ethereum Platform
+					Blockchain.info
+					Coin Payment
+					MyEtherWallet.com
+				</div>
+				<div class="6u$ 12u$(medium)">
+					<header class="major">
+						<center><h1><b>Press</b></h1></center>
+					</header>
+					BitcoinTalk English
+					BitcoinTalk Bahasa Indonesia
+					Triafa.com
+				</div>
 			</div>
 		</section>
 
