--- a/daethereum.html
+++ b/daethereum.html
@@ -88,20 +88,19 @@
 					Team: 10,000,000 DTHR
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
-						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="350" height="550"></iframe></center>
-						<li><a href="#ITS" class="button scrolly">Buy With Altcoin</a></li>
-						<li><a href="#https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
+						<li><a target="_blank" href="#" class="button scrolly">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+						<li><a target="_blank" href="#" class="button scrolly">Buy With Altcoin</a></li>
 					</ul>
-
 				</div>
 			</section>
 
-			<!-- Initial Token Sale -->
-		<section id="ITS" class="main style1">
+		<!-- Initial Token Sale -->
+			<section id="ITS" class="main style1">
 <h2 style="text-align:center">Initial Token Sale</h2>
-<p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a><br />
-0 DTHR	|	0 BTC	|	0 BTC	|	0 ETH</p>
-<p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction</p>
+<p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a></p>
+<p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction	|	Bonus 10%</p>
 
 <div class="columns">
   <ul class="price">
@@ -138,7 +137,7 @@
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
 </div>
-		</section>
+			</section>
 
 		<!-- Roadmap -->
 			<section id="Roadmap" class="main style2">
@@ -147,7 +146,6 @@
 						<header class="major">
 							<h2>Roadmap</h2>
 						</header>
-						<div class="6u 12u$(medium)">
 							<h1><b>2017</b></h1>
 							<p><b>Q1</b></p>
 							<p>Dae Platform Plans</p>
@@ -158,47 +156,47 @@
 							<p>Tokenization & Listed In EtherDelta, ForkDelta</p>
 							<p><b>Q3</b></p>
 							<p>Launch of Online Information Media Site</p>
-						</div>
-						<div class="6u$ 12u$(medium)">
 							<p><b>Q4</b></p>
 							<p>Launch of Travel Comparison Ticket Price Site</p>
-							<p><b>Q4</b></p>
+							<p><b>Q5</b></p>
 							<p>Launch of Dae Platform Markets</p>
 							<h1><b>2019</b></h1>
 							<p><b>Q1</b></p>
 							<p>Gathering And Discuss Dae Platform Development</p>
 							<p><b>Q2</b></p>
 							<p>Launch of New Projects Discussed.</p>
-						</div>
 					</div>
 				</div>
 			</section>
 
 		<!-- Others -->
-		<section id="Others" class="main style1">
+			<section id="Others" class="main style1">
 			<div class="container">
 				<header class="major">
 					<center><h2><a target="_blank" href="#">Others</a></h2></center>
 				</header>
-				<div class="6u 12u$(medium)">
 					<header class="major">
 						<center><h1><b>Partners</b></h1></center>
 					</header>
-					Ethereum Platform
-					Blockchain.info
-					Coin Payment
-					MyEtherWallet.com
-				</div>
-				<div class="6u$ 12u$(medium)">
-					<header class="major">
-						<center><h1><b>Press</b></h1></center>
-					</header>
-					BitcoinTalk English
-					BitcoinTalk Bahasa Indonesia
-					Triafa.com
-				</div>
+					<div class="columns">
+					  <ul class="price">
+					    <li class="header">Partners</li>
+					    <li>Ethereum Platform</li>
+					    <li>Blockchain.info</li>
+					    <li>Coin Payment</li>
+					    <li>MEW</li>
+					  </ul>
+					</div>
+					<div class="columns">
+					  <ul class="price">
+					    <li class="header">Press</li>
+					    <li>BitcoinTalk English</li>
+					    <li>BitcoinTalk Bahasa Indonesia</li>
+					    <li>Triafa.com</li>
+					  </ul>
+					</div>
 			</div>
-		</section>
+			</section>
 
 		<!-- Five -->
 		<!--
