--- a/daethereum.html
+++ b/daethereum.html
@@ -102,6 +102,7 @@
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a></p>
 <p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction	|	Bonus 10%</p>
 
+<div>
 <div class="columns">
   <ul class="price">
     <li class="header">Round 1</li>
@@ -113,7 +114,6 @@
     <li class="grey"><a href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button">Process</a></li>
   </ul>
 </div>
-
 <div class="columns">
   <ul class="price">
     <li class="header" style="background-color:#4CAF50">Round 2</li>
@@ -125,7 +125,6 @@
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
 </div>
-
 <div class="columns">
   <ul class="price">
     <li class="header">Round 3</li>
@@ -136,6 +135,7 @@
     <li>Sold 0 DTHR</li>
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
+</div>
 </div>
 			</section>
 
@@ -178,6 +178,7 @@
 					<header class="major">
 						<center><h1><b>Partners</b></h1></center>
 					</header>
+					<div>
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Partners</li>
@@ -194,6 +195,7 @@
 					    <li>BitcoinTalk Bahasa Indonesia</li>
 					    <li>Triafa.com</li>
 					  </ul>
+					</div>
 					</div>
 			</div>
 			</section>
