--- a/daethereum.html
+++ b/daethereum.html
@@ -102,7 +102,7 @@
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a></p>
 <p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction	|	Bonus 10%</p>
 
-<div>
+<div class="columns">
 <div class="columns">
   <ul class="price">
     <li class="header">Round 1</li>
@@ -116,7 +116,7 @@
 </div>
 <div class="columns">
   <ul class="price">
-    <li class="header" style="background-color:#4CAF50">Round 2</li>
+    <li class="header">Round 2</li>
     <li class="grey">15,000 DTHR/ETH</li>
     <li>15 million DTHR</li>
     <li>Starts on Jul 16, 2018</li>
@@ -178,7 +178,7 @@
 					<header class="major">
 						<center><h1><b>Partners</b></h1></center>
 					</header>
-					<div>
+					<div class="columns">
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Partners</li>
