--- a/daethereum.html
+++ b/daethereum.html
@@ -89,9 +89,9 @@
 					Savings Fund: 20,000,000 DTHR</p>
 					<ul class="actions">
 						<center><iframe src="https://daeplatform.net/dthr/countdown.html" name="Countdown" scrolling="no" allowTransparency="true" frameborder="0" width="330" height="330"></iframe></center>
-						<li><a target="_blank" href="#" class="button scrolly">Buy With Bitcoin</a></li>
+						<li><a target="_blank" href="#">Buy With Bitcoin</a></li>
 						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-						<li><a target="_blank" href="#" class="button scrolly">Buy With Altcoin</a></li>
+						<li><a target="_blank" href="#">Buy With Altcoin</a></li>
 					</ul>
 				</div>
 			</section>
@@ -102,7 +102,6 @@
 <p style="text-align:center">Contrack Address: <a target="_blank" href="/">Address</a></p>
 <p style="text-align:center">Min. 0.01 ETH per transaction	|	Max. 10 ETH per transaction	|	Bonus 10%</p>
 
-<div class="columns">
 <div class="columns">
   <ul class="price">
     <li class="header">Round 1</li>
@@ -136,7 +135,11 @@
     <li class="grey"><a href="#" class="button">Coming Soon</a></li>
   </ul>
 </div>
-</div>
+<ul class="actions">
+<li><a target="_blank" href="#">Buy With Bitcoin</a></li>
+<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+<li><a target="_blank" href="#">Buy With Altcoin</a></li>
+</ul>
 			</section>
 
 		<!-- Roadmap -->
@@ -175,10 +178,6 @@
 				<header class="major">
 					<center><h2><a target="_blank" href="#">Others</a></h2></center>
 				</header>
-					<header class="major">
-						<center><h1><b>Partners</b></h1></center>
-					</header>
-					<div class="columns">
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Partners</li>
@@ -196,7 +195,11 @@
 					    <li>Triafa.com</li>
 					  </ul>
 					</div>
-					</div>
+					<ul class="actions">
+					<li><a target="_blank" href="#">Buy With Bitcoin</a></li>
+					<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+					<li><a target="_blank" href="#">Buy With Altcoin</a></li>
+					</ul>
 			</div>
 			</section>
 
